# sales_forecast_system

./: .gitignore  db_connection.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  dockerfile
pipelines/feature_pipeline/: .gitignore  .sample_env  README.md  credentials.sh  dockerfile  makefile  pyproject.toml
pipelines/feature_pipeline/src/: Store.py  all.py  analyze_data.py  analyze_raw_data.py  check.py  combining_tables.py  config.py  data_cleaning.py  data_summary.py  data_transformation.py  data_visualization.py  explore.py  fetch_data.py  fetch_live_data.py  final_clean_data.py  final_summary.py  main.py  store.py  store_data.py  summary_of_rawdata.py  transform_data.py  visualize.py
pipelines/inference/src/: inference.py
pipelines/inference_pipeline/: .gitignore  pyproject.toml
pipelines/inference_pipeline/src/: app.py  featurengineering.py  hopsworks_utils.py  model_utils.py  predictor.py
pipelines/training/: pyproject.toml
pipelines/training/inference/: pyproject.toml
pipelines/training/src/: main.py  model.py  model_evaluation.py  model_registry.py  model_training.py  models.py  utils.py
pipelines/training_pipeline/: .dockerignore  dockerfile  model.pkl  pyproject.toml
pipelines/training_pipeline/models/: scaler.pkl
pipelines/training_pipeline/src/: feature_engineering.py  hopsworks_config.py  logger.py  main.py  utils.py  visualization.py
