[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.41"
dotenv = "^0.9.9"
psycopg2 = "^2.9.10"
numpy = "2.2.1"
scikit-learn = "^1.7.1"
pandas = "^2.3.1"
comet-ml = "^3.50.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
